--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.5"
+    "react-is": "^19.2.0",
+    "react-router-dom": "^7.9.5",
+    "react-table": "^7.8.0",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
