--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.21.3",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
@@ -18,7 +19,6 @@
     "react-icons": "^5.5.0",
     "react-is": "^19.2.0",
     "react-router-dom": "^7.9.5",
-    "react-table": "^7.8.0",
     "recharts": "^3.3.0"
   },
   "devDependencies": {
