--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.5.0",
     "react-is": "^19.2.0",
     "react-router-dom": "^7.9.5",
+    "react-table": "^7.8.0",
     "recharts": "^3.3.0"
   },
   "devDependencies": {
