--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.3.3",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
