--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,28 @@
-
-  {
+{
   "buildCommand": "npm install --legacy-peer-deps && npm run build",
+  
   "rewrites": [
     { "source": "/(.*)", "destination": "/" }
+  ],
+
+  "headers": [
+    {
+      "source": "/(.*).(png|jpg|jpeg|gif|svg|webp|ico)",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+      ]
+    },
+    {
+      "source": "/(.*).(css|js)",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+      ]
+    },
+    {
+      "source": "/manifest.json",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=86400" }
+      ]
+    }
   ]
 }
